Add clickable jeff image but not tom

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
 
+    <img class="jeff" src="https://i.imgur.com/vdloKou.gif" alt="Jeff">
+
+    <img class="tom" src="https://i.imgur.com/Wgo9vhx.gif" alt="Tom">
+
   </body>
 </html>
